<resources>
    <string name="app_name">Weather Wise</string>
    <string name="tempText">Current temperature: %1$s %2$s</string>
    <string name="windspeedText">Current wind speed: %1$s %2$s</string>
    <string name="maxtempText">Max:\n %1$s %2$s</string>
    <string name="maxwindSpeed">Max:\n %1$s %2$s</string>
    <string name="sunriseText">Sunrise:\n %1$s %2$s</string>
    <string name="sunsetText">Sunset:\n %1$s %2$s</string>
    <string name="weathercodeText">Expected today:\n %1$s</string>
    <string name="temperature_2m_not_text">%1$s</string>
    <string name="apparent_temperature_not_text">Feels like %1$s %2$s</string>
    <string name="windspeed_10m_not_text">Wind speed:\n %1$s %2$s</string>
    <string name="weather_code_hourly_not_text">Weather conditions:\n %1$s</string>
    <string name="relativehumidity_2m_not_text">Relative humidity:\n %1$s %2$s</string>
    <string name="precipitation_probability_not_text">Precipitation probability:\n %1$s %2$s</string>
    <string name="pressure_msl_not_text">Atmospheric pressure:\n %1$s %2$s</string>
    <string name="pressure_msl_city_normal">Normal atmospheric pressure:\n %1$s %2$s</string>
    <string name="pressure_msl_now">Current barometric pressure:\n %1$s %2$s</string>
    <string name="visibility_not_text">Visibility:\n %1$s %2$s</string>
    <string name="uv_index_not_text">UV index:\n %1$s</string>
    <string name="windgusts_10m_not_text">Gusts of Wind:\n %1$s %2$s</string>
    <string name="cloudcover_not_text">Cloud cover:\n %1$s %2$s</string>
    <string name="winddirection_10m_not_text">Wind direction:\n</string>
    <string name="R_high_pressure">\t\t\tLow air pressure is observed now:\n\n
\t\t\tIf you feel uncomfortable, here are a few suggestions that can help you deal with this condition:\n
\t\t\t1. Try to drink more water or other liquids to stay hydrated.\n
\t\t\t2. Try to reduce your physical activity and rest.\n
\t\t\t3. Eat right: Eat foods rich in protein, carbohydrates, and vitamins to support your immune system.\n
\t\t\t4. Eat more salty foods. Salt can help increase blood pressure, so it can help manage low blood pressure.\n
\t\t\t5. Avoid sudden movements and quick changes in body position. This may cause dizziness and loss of consciousness.\n
\t\t\t6. Try drinking a cup of coffee or tea. Caffeine and theine can help increase blood pressure.\n
\t\t\t7. Avoid alcohol. Alcohol can worsen low barometric pressure and cause additional problems.\n
\t\t\t8. Add foods rich in vitamin C to your diet. Vitamin C can help improve circulation and increase blood pressure. Foods rich in vitamin C include citrus fruits, kiwifruit, broccoli, and cabbage.\n
\t\t\t9. Engage in physical activity such as walking or light exercise such as yoga. This can help improve circulation and increase blood pressure.\n
\t\t\t10. Avoid stress and psychological tension. Stress and tension can make things worse in low atmospheric pressure.\n
\t\t\t11. Sleep enough. Lack of sleep can worsen low barometric pressure and lead to poor overall health. Try to sleep at least 7-8 hours a day.
</string>
    <string name="R_low_pressure">\t\t\tAtmospheric pressure is high now:\n\n
\t\t\tIf you feel uncomfortable, here are a few suggestions that can help you deal with this condition:\n
\t\t\t1. Limit physical activity and refrain from sports activities, especially if they involve climbing to heights.\n
\t\t\t2. Reduce salt intake, as it promotes fluid retention in the body and increases blood pressure.\n
\t\t\t3. Drink plenty of fluids to prevent dehydration and keep your cardiovascular system healthy.\n
\t\t\t4. Avoid large temperature fluctuations and strong winds, which can impair health.\n
\t\t\t5. Observe the regime of the day and sleep, get enough rest.\n
\t\t\t6. If necessary, take medication prescribed by the doctor. Usually, for high blood pressure, medications are recommended that reduce its level.\n
\t\t\t7. Avoid alcoholic beverages and strong coffee, as they can cause high blood pressure.\n
\t\t\t8. Eat healthy and regularly by eating more vegetables, fruits and greens, as well as foods rich in potassium such as bananas, nuts, potatoes, dried fruits.\n
\t\t\t9. Avoid stressful situations and negative emotions, as they can aggravate high blood pressure.\n
\t\t\t10. You can massage the neck and temporal region, take a hot shower or drink hot peppermint tea.
</string>
    <string name="norm_pressure">Barometric pressure is normal. No further advice required</string>
    <string name="uv_0_2">Adult Risk: Low\n
  Protective measures are not needed. For most people, there is no danger outdoors.</string>
    <string name="uv_3_5">\t\t\tWhen uv index is between 3 and 5:\n\n
\t\t\t1. Avoid prolonged exposure to the sun between the hours of 10:00 am and 4:00 pm, when UV rays are at their strongest.\n
\t\t\t2. Apply sunscreen with SPF 30+ to your skin and reapply every 2 hours.\n
\t\t\t3. Wear protective clothing such as long sleeves, trousers, wide-brimmed hats, and sunglasses.\n
\t\t\t4. Avoid tanning beds and other sources of UV radiation.\n
\t\t\t5. Drink more water to avoid dehydration of the skin and reduce its protective properties.\n
\t\t\t6. Be especially careful if you have light skin, eyes, and hair, or if you have previously diagnosed skin health issues.\n
\t\t\t7. If you notice skin changes such as age spots, moles, dryness or burning, see a dermatologist.\n
\t\t\tIt is important to remember that even on overcast days, UV rays can penetrate clouds and increase the UV index. Therefore, recommendations for sun protection are important to follow in any weather.
</string>
    <string name="uv_6_7">\t\t\tIf the UV index is in the range of 6 to 7, this indicates a high level of ultraviolet rays, and appropriate measures should be taken to protect the skin. Here are some suggestions:\n
\t\t\t1. Avoid prolonged exposure to the sun between the hours of 10:00 am and 4:00 pm, when ultraviolet rays are most intense.\n
\t\t\t2.Wear protective clothing that fits close to the body and covers most of the skin. For example, long sleeves, wide-brimmed hats, UV protection glasses.\n
\t\t\t3.Use a sunscreen with SPF 30+ UV protection and apply it to the skin 30 minutes before sun exposure. Reapply every two hours and after swimming or sweating.\n
</string>
    <string name="uv_8_10">\t\t\tWhen the UV index is in the range of 8 to 10, this indicates a very high risk from solar radiation. In this case, it is recommended:\n
\t\t\t1. Avoid sun exposure between 10:00 am and 4:00 pm, when the sun\'s radiation is at its strongest.\n
\t\t\t2. Wear protective clothing, thick and light clothing with long sleeves and pants that fit close to the body.\n
\t\t\t3. Use SPF 30+ sunscreen and apply to skin 30 minutes before sun exposure on exposed areas of the body, including face, neck, arms and legs. Reapply every two hours and after swimming or sweating\n
\t\t\t4. Wear a wide-brimmed hat or cap to protect your face, ears, and neck.\n
\t\t\t5. Avoid using tanning beds and tanning lamps as they can also increase UV levels.\n
\t\t\t6. Drink enough water to avoid dehydration, which can increase the effects of sunlight on the body.\n
\t\t\t7. Avoid skin products that contain alpha hydroxy acids (AHAs), as they can increase skin sensitivity to UV radiation.
     </string>
    <string name="uv_11">\t\t\tA UV index greater than 11 is considered extremely high levels of ultraviolet radiation, which can cause severe burns and an increased risk of skin cancer. Therefore, the following precautions are recommended:\n
\t\t\t1. Avoid exposure to the sun from 10 am to 4 pm, when UV radiation is most intense.\n
\t\t\t2.If you have to be in the sun, put a hat or cap on your head and sunglasses on your eyes.\n
\t\t\t3. Use SPF 30+ sunscreen and apply to skin 30 minutes before sun exposure on exposed areas of the body, including face, neck, arms and legs. Reapply every two hours and after swimming or sweating.\n
\t\t\t4. Wear clothing that covers most of your body and protects from the sun.\n
\t\t\t5. Avoid tanning beds and lamps, which can increase ultraviolet radiation and increase the risk of skin cancer.
</string>
    <string name="windIndex_1">No risk of frostbite or hypothermia</string>
    <string name="windIndex_2">Slight risk of frostbite</string>
    <string name="windIndex_3">Slight risk of frostbite and hypothermia</string>
    <string name="windIndex_4">Average risk of hypothermia and frostbite on exposed skin within 10-30 minutes</string>
    <string name="windIndex_5">High risk of hypothermia and frostbite on exposed skin within 5-10 minutes</string>
    <string name="windIndex_6">Very high risk of hypothermia and frostbite on exposed skin within 2-5 minutes</string>
    <string name="windIndex_7">Extremely high risk of hypothermia and frostbite on exposed skin in less than two minutes</string>
    <string name="hum_norm">Atmospheric humidity limits that are comfortable for a person are in the range from 40 to 70%, no additional recommendations are required.</string>
    <string name="high_hum_tp35">\t\t\tHigh humidity and high temperatures can cause heat stroke and other health problems. Some tips to help you out in these conditions:\n
\t\t\t1. Drink enough water. It is important to stay hydrated to avoid dehydration and other health issues.\n
\t\t\t2. Avoid prolonged exposure to the sun. Stay in the shade or indoors with air conditioning.\n
\t\t\t3. Dress appropriately. Wear light, loose clothing that won\'t trap heat.\n
\t\t\t4. Avoid physical activity. If you plan to exercise outside, do it early in the morning or late in the evening when the temperature is cooler.\n
\t\t\t5. Use a fan or air conditioner. This can help bring down the temperature and reduce the humidity levels.\n
\t\t\t6. Be attentive to your body. If you feel very hot or tired, rest in the shade and drink some water.\n
\t\t\t7. Seek medical attention if you become very ill or develop any severe symptoms.
</string>
    <string name="high_hum_tp30_35">\t\t\tHigh humidity at temperatures above 30 degrees Celsius may cause problems with the body\'s thermoregulation and deterioration of well-being. To reduce the risk of possible negative consequences, it is recommended:\n
\t\t\t1. Wear light and fitted clothing made from natural materials such as cotton or linen to allow the skin to breathe and allow excess moisture to evaporate.\n
\t\t\t2. Avoid strenuous exercise and direct sun exposure during the hottest periods (usually between 11:00 am and 4:00 pm). If you must be outside during this time, you should look for shady places or use umbrellas, hats, and other items that can create shade.\n
\t\t\t3. Drink enough water to avoid dehydration. When humidity is high, the body loses more fluid than when humidity is low, so it is important to drink enough water to replace fluid loss.\n
\t\t\t4. Avoid alcohol and coffee as they can increase dehydration.\n
\t\t\t5. Pay attention to your well-being and seek medical help at the first sign of deterioration in health.
</string>
    <string name="changeCity">Change City</string>
    <string name="enterCity">Please enter city name:</string>
    <string name="textInputLayoutCity">City name</string>
    <string name="rememberCity">Remember city</string>
    <string name="btnFind">Find</string>
    <string name="ifWantChangeCity">Click if you want to change the selected city</string>
    <string name="off">Disable</string>
    <string name="on">Enable</string>
</resources>