<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:background="@drawable/main_gradient2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/enterCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/commissioner"
            android:gravity="center"
            android:text="@string/enterCity"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ET_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInputLayoutCity"
            android:textColorHint="@color/white"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="#fff"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/commissioner"
                android:imeOptions="actionSearch"
                android:inputType="textCapWords"
                android:ems="10"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:id="@+id/check_btn"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:theme="@style/MyCheckBoxStyle"
                android:text="@string/rememberCity"
                android:textColor="@color/white"
                android:fontFamily="@font/commissioner"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.165" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:backgroundTint="#08939F"
                android:text="@string/btnFind"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintHeight_percent="0.8"
            android:layout_marginBottom="30dp">

            <ListView
                android:id="@+id/lv_city_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>